2009-08-31  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.GtkCore.addin.xml: Don't use the text editor
	  display binding id as reference for registering the designer
	  view. Use DefaultDisplayBinding instead. Removed unused
	  supportedFormats attribute.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic: Update gtk# dependency.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.GtkCore.csproj: Updated dependencies. We now
	  depend on gtk# 2.12.8, Mono 2.4, and Mono.Addins 0.4.

2009-08-24  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderView.cs:
	* MonoDevelop.GtkCore.GuiBuilder/ActionGroupView.cs:
	* MonoDevelop.GtkCore.GuiBuilder/CombinedDesignView.cs:
	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderDisplayBinding.cs:
	  Added support for saving and restoring the status of the
	  designer, including the undo queue. This allows implenting
	  ISupportsProjectReload.

2009-08-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.GtkCore.NodeBuilders/FolderNodeBuilder.cs:
	* MonoDevelop.GtkCore.NodeBuilders/GuiBuilderProjectNodeBuilder.cs:
	  Remove unused files.

2009-08-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.GtkCore/ReferenceManager.cs:
	* MonoDevelop.GtkCore.GuiBuilder/ToolboxLoader.cs:
	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderView.cs:
	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderService.cs: Use the
	  new AssemblyContext class to query and resolve assemblies.

2009-08-06  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.GtkCore.csproj:
	* MonoDevelop.GtkCore/Counters.cs:
	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderProject.cs: Added
	  some performance counters.

2009-07-21  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderView.cs:
	* MonoDevelop.GtkCore.GuiBuilder/ActionGroupView.cs:
	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderDocumentOutline.cs:
	  Track api changes.
